--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "@json2csv/plainjs": "^7.0.6",
+    "adm-zip": "^0.5.16",
+    "csv-parse": "^6.1.0",
     "fast-csv": "^5.0.1",
     "htmlparser2": "^9.1.0",
     "json2csv": "^6.0.0-alpha.2",
